springboot-poc-mutu/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-poc-mutu
  labels:
    app: springboot-poc-mutu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-poc-mutu
      release: springboot-poc-mutu-k8s
  template:
    metadata:
      labels:
        app: springboot-poc-mutu
        chart: springboot-poc-mutu-0.1.0
        release: springboot-poc-mutu-k8s
        heritage: k8s-manifest
        component: api-proc-layer
        checksum-config: bf6bba16c2a8731040fcfe4f0e886a5ac13caaccdf57c97b591e250f4f880da
    spec:
      containers:
        - name: springboot-poc-mutu
          image: "zawthanoo/springboot-poc-mutu:1.0.0-310-552069fb"
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 8082
          readinessProbe:
            httpGet:
              path: /demo/actuator/health/readiness
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /demo/actuator/health/liveness
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              memory: 1024Mi
          volumeMounts:
            - name: springboot-poc-mutu-config-volume
              readOnly: true
              mountPath: "/opt/mutu/config/application_config_override.yaml"
              subPath: application_config_override.yaml
            - name: springboot-poc-mutu-secret-config-volume
              readOnly: true
              mountPath: "/opt/mutu/config/application_secret_override.yaml"
              subPath: application_secret_override.yaml
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      volumes:
        - name: springboot-poc-mutu-secret-config-volume
          secret:
            secretName: springboot-poc-mutu
        - name: springboot-poc-mutu-config-volume
          configMap:
            name: springboot-poc-mutu
            items:
              - key: application_config_override.yaml
                path: application_config_override.yaml
