springboot-poc-mutu/base/simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
  #   reloader.stakater.com/search: "true"
  name: springboot-poc-mutu
  labels:
    app: springboot-poc-mutu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-poc-mutu
  template:
    metadata:
      labels:
        app: springboot-poc-mutu
    spec:
      containers:
        - name: springboot-poc-mutu
          image: THIS_IMAGE_HAVE_TO_BE_REPLACED
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 8082
          readinessProbe:
            httpGet:
              path: /demo/actuator/health/readiness
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /demo/actuator/health/liveness
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              memory: 1024Mi
          volumeMounts:
            - name: springboot-poc-mutu-config-volume
              readOnly: true
              mountPath: "/opt/jp/config/application_config_override.yaml"
              subPath: application_config_override.yaml
            - name: springboot-poc-mutu-secret-config-volume
              readOnly: true
              mountPath: "/opt/jp/config/application_secret_override.yaml"
              subPath: application_secret_override.yaml
      # imagePullSecrets:
      #   - name: dockerhub-image-pull-secret
      volumes:
        - name: springboot-poc-mutu-secret-config-volume
          secret:
            secretName: springboot-poc-mutu
        - name: springboot-poc-mutu-config-volume
          configMap:
            name: springboot-poc-mutu
            items:
              - key: application_config_override.yaml
                path: application_config_override.yaml
