springboot-poc-mutu/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-poc-mutu
  labels:
    app: springboot-poc-mutu
    chart: springboot-poc-mutu-0.1.0
    release: springboot-poc-mutu-k8s
    heritage: k8s-manifest
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: api
  selector:
    app: springboot-poc-mutu
    release: springboot-poc-mutu-k8s
